manifests/adminer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: history-care-adminer
spec:
  selector:
    app: history-care-adminer
  ports:
    - name: http
      port: 8080
      targetPort: 8080
